<resources>
    <string name="app_name">MyShip</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="previous">Previous</string>
    <string name="hintUser">Username</string>
    <string name="hintPass">Password</string>
    <string name="Dobsze" />
    <string name="sle" />
    <string name="message">Message</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="hintLastName">LastName</string>
    <string name="GoBack">GoBack</string>
    <string name="PhoneNumber" >PhoneNumber</string>
    <string name="Package_archives">Package_archives</string>
    <string name="Logout">Logout</string>
    <string name="About">About</string>
    <string name="Main">Main</string>
    <string name="about">About</string>
    <string name="main">Main</string>
    <string name="archives">Archives</string>
    <string name="Idea">Idea</string>
    <string name="PackageName">PackageName</string>
    <string name="PackageStatus">PackageStatus</string>
    <string name="packagesender">Packagesender</string>
    <string name="Packagesender">PackageSender</string>
    <string name="Password">Password</string>
    <string name="PackageImage">PackageImage</string>
    <string name="More">More</string>
    <string name="Your_Shipments">Your Shipments</string>
    <string name="IdeaText">My Ship is app ,thanks too u got information about you Packages in just one app</string>
    <string name="FunctionalitiesText">Checking where your package is.Ordering package delivery.Checking your package History</string>
    <string name="VersionText">Current app Version 1.0.0 do not got planned Functionalities but we will make our best in future</string>
    <string name="Functionalities">Functionalities</string>
    <string name="AppVersion">AppVersion</string>
    <string name="ordering_courier">Ordering Courier</string>
    <string name="neworder">NewOrder</string>
    <string name="sendorder">SendOrder</string>
    <string name="PackageReciver">PackageReciver</string>
    <string name="ReciverID">ReciverID</string>
    <string name="Sending">Sending</string>
</resources>
