<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">


    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginEnd="163dp"
        android:layout_marginRight="163dp"
        android:layout_marginBottom="87dp"
        android:text="@string/GoBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackButt" />

    <Button
        android:id="@+id/BackButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="163dp"
        android:layout_marginRight="163dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Login"
        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterPassword" />

    <EditText
        android:id="@+id/RegisterUserFName"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginTop="171dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintUser"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/RegisterLUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/RegisterLUser"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="243dp"
        android:layout_marginBottom="34dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintLastName"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/RegisterNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/RegisterPassword"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterNumber" />

    <EditText
        android:id="@+id/RegisterNumber"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/PhoneNumber"
        app:layout_constraintBottom_toTopOf="@+id/RegisterPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterLUser"
        android:autofillHints=""
        android:maxLength="9"
        />

</androidx.constraintlayout.widget.ConstraintLayout>