<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/ordering_courier"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Packagelayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <Button
        android:id="@+id/sendorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:layout_marginBottom="27dp"
        android:text="@string/SendOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/Packagelayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535">


        <TextView
            android:layout_width="@dimen/LinearPackageDim1"
            android:layout_height="@dimen/LinearPackageDim2"
            android:text="@string/PackageName" />

        <EditText
            android:id="@+id/OrderName"
            android:layout_width="@dimen/LinearPackageDim3"
            android:layout_height="wrap_content"
            android:autofillHints="OrderName"
            android:inputType="number"
            android:maxLength="9" />

        <TextView
            android:layout_width="@dimen/LinearPackageDim1"
            android:layout_height="@dimen/LinearPackageDim2"
            android:text="@string/ReciverID" />

        <EditText
            android:id="@+id/OrderID"
            android:layout_width="@dimen/LinearPackageDim3"
            android:layout_height="wrap_content"
            android:autofillHints="OrderStatus"
            android:inputType="text"
            android:maxLength="2" />

        <TextView
            android:layout_width="@dimen/LinearPackageDim1"
            android:layout_height="@dimen/LinearPackageDim2"
            android:text="@string/PackageReciver" />

        <EditText
            android:id="@+id/OrderReciver"
            android:layout_width="@dimen/LinearPackageDim3"
            android:layout_height="wrap_content"
            android:autofillHints="OrderReciver"
            android:inputType="text" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>